# r-space-gm

./: .gitignore  Cargo.toml  buildfsharp.sh  buildrs.sh  index.html  run.sh  testfsharp.sh
.config/: dotnet-tools.json
src/: main.rs
src/corelib/: .gitignore  Cargo.toml
src/corelib/src/: CoreLib.fsproj  entities.fs  lib.fs  shapes.fs  test.fs  world.fs
src/domain/: Domain.fsproj  lib.fs
