[package]
name = "testgame"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_game"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
# wasm-bindgen = "0.2"
macroquad = "0.3.23"
macroquad-platformer = "0.1.3"
corelib = { path = "./src/corelib" }

[profile.release]
opt-level = 3
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = true